[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pycoilgen"
authors = [
        {name = "Kevin Meyer", email = "kevin@kmz.co.za"},
        {name = "Phillip Amrein", email="none@noreply.com"},
]
readme = "README.md"
license = {file = "LICENSE.txt"}
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]
requires-python = ">=3.6"
keywords = [
    "MRI",
    "Gradient Field",
    "Physics",
    "Coil",
]
dependencies = [
    "numpy==1.21.6",
    "scipy==1.7.3",
    "trimesh==3.21.7",
    "pyglet<2",
    "networkx==2.6.3",
    "sympy==1.10.1",
    "pillow<=9.5",
]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/kev-m/pyCoilGen"
Documentation = "https://github.com/kev-m/pyCoilGen"

[tool.flit.module]
name = "pyCoilGen"

[tool.flit.sdist]
include = [
    "data/",
]
exclude = [
    "docs",
    "examples",
    "scratchpad",
    "tests",
    "pyCoilGen/pyCoilGen_develop.py",
]
