[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pycoilgen"
authors = [
        {name = "Kevin Meyer", email = "kevin@kmz.co.za"},
        {name = "Philipp Amrein", email="none@noreply.com"},
]
readme = "README.md"
license = {file = "LICENSE.txt"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.6"
keywords = [
    "MRI",
    "Magnetic Resonance Imaging",
    "NMR",
    "Nuclear Resonance Imaging",
    "Target Field",
    "Gradient Field",
    "Physics",
    "Coil",
]
dependencies = [
    "numpy==1.21.6",
    "scipy==1.7.3",
    "trimesh==3.21.7",
    "sympy==1.10.1",
    "pillow<=9.5",
    "matplotlib==3.5.3",
]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/kev-m/pyCoilGen"
Documentation = "https://pycoilgen.readthedocs.io/"
Source = "https://github.com/kev-m/pyCoilGen"

[tool.flit.module]
name = "pyCoilGen"

[tool.flit.sdist]
include = [
]
exclude = [
    "docs",
    "examples",
    "scratchpad",
    "tests",
    "data",
    "pyCoilGen/pyCoilGen_develop.py",
]
