[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pycoilgen_data"
authors = [
        {name = "Kevin Meyer", email = "kevin@kmz.co.za"},
        {name = "Philipp Amrein", email="none@noreply.com"},
]
readme = "README.md"
license = {file = "LICENSE.txt"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]

requires-python = ">=3.6"
keywords = [
    "MRI",
    "Magnetic Resonance Imaging",
    "NMR",
    "Nuclear Resonance Imaging",
    "Target Field",
    "Gradient Field",
    "Physics",
    "Coil",
]
dependencies = [ "pycoilgen" ]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/kev-m/pyCoilGen"
Documentation = "https://pycoilgen.readthedocs.io/"
Source = "https://github.com/kev-m/pyCoilGen"
"Code of Conduct" = "https://github.com/me/spam/blob/master/CODE_OF_CONDUCT.md"
"Bug tracker" = "https://github.com/kev-m/pyCoilGen/issues"
Changelog = "https://github.com/kev-m/pyCoilGen/blob/master/CHANGELOG.md"
Contributing = "https://github.com/kev-m/pyCoilGen/blob/master/CONTRIBUTING.md"


[tool.flit.module]
name = "pyCoilGenData"
